# Production-Ready-PdfChatBot

./: .dockerignore  .env  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  template.sh
app/: main.py
app/api/v1/: endpoints.py
app/core/: config.py  database.py
app/schemas/: ingestion.py
app/services/: chat.py
chroma_db_data/demo_user/: chroma.sqlite3
chroma_db_data/healthcare_demo/: chroma.sqlite3
frontend/: ui.py
